<resources>
    <string name="app_name">Prescription Follower </string>
    <string name="action_settings">Settings</string>
    <string name="textmain">welcome\u0020to\u0020djahnit"'"s\u0020application\u0020,this\u0020application\u0020helps\u0020you\u0020to\u0020remember\u0020to\u0020take\u0020your\u0020pills</string>
    <string name="button">Medicine</string>
    <string name="button2">medical\u0020prescriptions</string>
    <string name="title_pills">Medicament\u0020activity</string>
    <string name="title_add_pills">Add\u0020Pill\u0020window </string>
    <string name="fab" > add\u0020pills</string>
    <string name="namePill">Name</string>
    <string name="dosePill">Dose(mg)</string>
    <string name="formatPill">Format(capsule,tablet,liquid)</string>
    <string name="done">done</string>
    <string name="upload_pic">upload\u0020picture</string>
    <string name="title_Prescription">Prescription</string>
    <string name="button3">Posologie</string>
    <string name="actif">actif</string>
    <string name="inactif">inactif</string>
    <string name="title_add_Prescription">Add Prescription</string>
    <string name="spinner_title2">choose when you should take the pill</string>
    <string name="spinner_title1">choose how much you\'ll take your pill per day</string>
    <string name="spinner_title">choose pill</string>
    <string name="submit">submit</string>
    <string name="choice1">morning</string>
    <string name="choice2">noon</string>
    <string name="choice3">evening</string>
    <string name="choice4">night</string>
    <string name="choice5">morning,evening</string>
    <string name="choice6">morning,night</string>
    <string name="choice7">noon,evening</string>
    <string name="choice8">noon,night</string>
    <string name="choice9">morning,noon,evening</string>
    <string name="choice10">noon,evening,night</string>
    <string name="choice11">morning,noon,evening,night</string>
    <string name="choicea">before meal</string>
    <string name="choiceb">during meal</string>
    <string name="choicec">after meal</string>
    <string name="infodateexp">date of expiration : </string>
    <string name="title_Read_Prescription">Read Prescription</string>
    <string name="descriptionname">Pill name :</string>
    <string name="descriptionformat">Pill format :</string>
    <string name="descriptiondose">Pill dose :</string>
    <string name="listpilldes">pill list:</string>
    <string name="before">before</string>
    <string name="soon">soon</string>
    <string name="now">now</string>
    <string name="descriptionquand">taking time:</string>
    <string name="title_Posologie">Posologie</string>
    <string name="default_notification_channel_title">taking time</string>
    <string name="default_notification_channel_id">pill taking time</string>
    <string name="messagenotification">it\'s time to take your pill</string>
</resources>
