<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Add_pill_Activity"
    tools:showIn="@layout/activity_add_pills"
    android:orientation="vertical"
    android:weightSum="1.0">

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="60dp"
        android:hint="@string/namePill"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:hint="@string/dosePill"

        android:inputType="number"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:hint="@string/formatPill"
        />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="270dp"

        android:clickable="true"
        android:src="@mipmap/ic_launcher"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        />

</LinearLayout>