<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp">

    <TextView
        android:id="@+id/nompi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descriptionname"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/nompill"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="14sp" />

    <TextView
        android:id="@+id/formatpi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descriptionformat"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/formatpill"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nompi"
        tools:textSize="14sp" />

    <TextView
        android:id="@+id/dosepi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/descriptiondose"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quandpi"
        app:layout_constraintEnd_toStartOf="@+id/dosepill"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formatpi"
        tools:textSize="14sp" />

    <TextView
        android:id="@+id/quandpi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descriptionquand"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/quandpill"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dosepi"
        tools:textSize="14sp" />

    <TextView
        android:id="@+id/nompill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nompi"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="14sp" />

    <TextView
        android:id="@+id/formatpill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nompill"
        tools:textSize="14sp" />

    <TextView
        android:id="@+id/dosepill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dosepi"
        app:layout_constraintTop_toBottomOf="@+id/formatpill"
        tools:textSize="14sp" />

    <TextView
        android:id="@+id/quandpill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quandpi"
        app:layout_constraintTop_toBottomOf="@+id/dosepill"
        tools:textSize="14sp" />

</android.support.constraint.ConstraintLayout>